--- a/auth.css
+++ b/auth.css
@@ -144,7 +144,7 @@ table {
   justify-content: center;
   width: 100vw;
   height: 100vh;
-  background-image: url(images/bg-daftar.jpg);
+  background-image: url(images/bg-login.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
