--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ section {
 body {
   line-height: 1;
   font-family: "lato", sans-serif;
+  overflow-x: hidden;
 }
 ol,
 ul {
@@ -158,6 +159,66 @@ table {
   align-items: center;
   display: flex;
   gap: 8px;
+}
+
+.profile ul {
+  list-style-type: none;
+  overflow: hidden;
+}
+
+.profile li {
+  float: left;
+}
+
+.profile li,
+.dropbtn {
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.dropdown-content img {
+  width: 16px;
+  height: 16px;
+}
+
+.profile a:hover,
+.dropdown:hover .dropbtn {
+  background-color: #c1c2c4;
+  color: #181a1c;
+  transition: 0.3s ease;
+}
+
+.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  /* justify-content: space-between;
+  flex-direction: row; */
+  position: absolute;
+  background-color: #181a1c;
+}
+
+.dropdown-content a {
+  text-decoration: none;
+  display: none;
+  text-align: left;
+  padding: 4px;
+  border-radius: 4px;
+  width: 113px;
+  height: 104px;
+}
+
+.dropdown-content a:hover {
+  background-color: #c1c2c4;
+  color: #181a1c;
+}
+
+.dropdown:hover .drop-content {
+  display: block;
 }
 
 /* HERO */
@@ -687,6 +748,10 @@ table {
 }
 
 @media (max-width: 780px) {
+  .body {
+    overflow-x: hidden;
+  }
+
   .navbar {
     padding: 6px 20px;
     height: 56px;
@@ -700,6 +765,8 @@ table {
 
   .profile {
     gap: 4px;
+    align-items: center;
+    flex-direction: column;
   }
 
   .menu ul li a {
@@ -728,7 +795,7 @@ table {
     transform: translateY(-50%);
   }
 
-  .just-profile {
+  .just-profile img {
     width: 20px;
   }
 
@@ -1005,5 +1072,37 @@ table {
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
+  }
+
+  .dropdown-content {
+    padding: 4px;
+    right: 20px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .dropdown-content a {
+    padding: 8px 12px;
+    width: 113px;
+    height: 32px;
+    font-size: 10px;
+    line-height: 140%;
+    letter-spacing: 0.2px;
+    /* color: white; */
+    font-weight: 500;
+    align-items: center;
+    /* color: #3254ff; */
+  }
+
+  .dropdown-profile a {
+    color: #3254ff;
+  }
+
+  .dropdown-premium a {
+    color: white;
+  }
+
+  .dropdown-keluar a {
+    color: white;
   }
 }
