--- a/style.css
+++ b/style.css
@@ -163,7 +163,9 @@ table {
 
 .profile ul {
   list-style-type: none;
-  overflow: hidden;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
 .profile li {
@@ -172,8 +174,9 @@ table {
 
 .profile li,
 .dropbtn {
-  display: inline-block;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-decoration: none;
   color: #ffffff;
 }
@@ -1075,6 +1078,7 @@ table {
   }
 
   .dropdown-content {
+    display: flex;
     padding: 4px;
     right: 20px;
     flex-direction: column;
@@ -1082,16 +1086,15 @@ table {
   }
 
   .dropdown-content a {
+    display: flex;
     padding: 8px 12px;
     width: 113px;
     height: 32px;
     font-size: 10px;
     line-height: 140%;
     letter-spacing: 0.2px;
-    /* color: white; */
     font-weight: 500;
     align-items: center;
-    /* color: #3254ff; */
   }
 
   .dropdown-profile a {
