--- a/style.css
+++ b/style.css
@@ -1080,6 +1080,7 @@ table {
   .dropdown-content {
     display: flex;
     padding: 4px;
+    top: 42px;
     right: 20px;
     flex-direction: column;
     justify-content: space-between;
